On branch 02-css-using-order-to-rearrange-flexbox-children

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header>Header</header>
     <nav class="main-nav">
       <ul>
         <li><a href="#">Work</a></li>
@@ -15,5 +16,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <main>Content</main>
+    <footer>Footer</footer>
   </body>
 </html>
