--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 class="title-1">Garth</h1>
-    <h1 class="title-2">is</h1>
-    <h1 class="title-3">Rad</h1>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=931" width="150" height="150" alt="random image"/>
+      <figcaption>Paul Earle</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=968" width="150" height="150" alt="Paul Itkin"/>
+      <figcaption>Paul Itkin</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=974" width="150" height="150" alt="Greg Rakozy"/>
+      <figcaption>Greg Rakozy</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=973" width="150" height="150" alt="Cameron Kirby"/>
+      <figcaption>Cameron Kirby</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=965" width="150" height="150" alt="Liane Metzler"/>
+      <figcaption>Liane Metzler</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=961" width="150" height="150" alt="Sven Scheuermeier"/>
+      <figcaption>Sven Scheuermeier</figcaption>
+    </figure>
+    <figure>
+      <img src="https://unsplash.it/150/150?image=966" width="150" height="150" alt="Alberto Restifo"/>
+      <figcaption>Alberto Restifo</figcaption>
+    </figure>
   </body>
 </html>
